# gxk

./: Cargo.toml  README.md
data/: 1.md  2022_7_12  2022_7_12.md  2022_8_24.md  2022_8_8.md  2022_8_9.md  4.md  8.md  index.toml
data/post/: 1.md
src/: about.rs  friends.rs  html.rs  index.rs  main.rs  md.rs  memo.rs  parse.rs  path.rs  post.rs
static/: test.txt
static/css/: index.css
templates/: about.html  friends.html  index.html  memo.html  post.html  postAll.html
