[package]
name = "gxk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.9"
tokio = { version = "1", features = ["full"] }
askama = "0.11"
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
comrak = "0.14"
serde = "1.0"
toml = "0.5"
